# OOP

HW 1/: CMakeProject1.cpp
HW 2/: main.cpp
HW 3/: HW 3.cpp  Rational.cpp  header.h  main.cpp
HW 4/: input.txt  main.cpp
HW 5/: main.cpp  module1.cppm  module2.cppm
HW 6/: main.cpp
HW 8/: input.txt  main.cpp
LAB_1_Bit_Array/Bit_Array(lab1)/: CMakeLists.txt
LAB_1_Bit_Array/Bit_Array(lab1)/Bit_Array(lab1)/: Array.cpp  Array.h  Bit_Array(lab1).cpp  Bit_Array(lab1).h  CMakeLists.txt
LAB_1_Bit_Array/bit array/: Array.h  bit array.vcxproj  test.cpp
LAB_1_Bit_Array/bit array/x64/Debug/: bit array.exe.recipe  bit array.vcxproj.FileListAbsolute.txt
LAB_1_Bit_Array/bit array/x64/Debug/bit array.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  bit array.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
LAB_2_Life_game/: baza.cpp  input.lif  new.lif
LAB_3_Sound_Processor/: commands.txt  files_list.txt  sound.cpp
